[package]
name = "notify"
version = "0.1.1"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[workspace]
members = [
  "ntfy-daemon"
]

[dependencies]
ntfy-daemon = { path = "./ntfy-daemon" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12", "blueprint"] }
once_cell = "1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3"
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capnp = "0.17.2"
capnp-rpc = "0.17.0"
anyhow = "1.0.71"
chrono = "0.4.26"
rand = "0.8.5"
ureq = "2.7.1"
futures = "0.3.0"
ashpd = "0.6.0"
relm4-macros = { version = "0.6.2", features = [], default-features = false }
