[package]
name = "notify"
version = "0.1.6"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2024"

[profile.release]
lto = "thin"

[workspace]
members = [
  "ntfy-daemon"
]

[dependencies]
ntfy-daemon = { path = "./ntfy-daemon" }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_10"] }
gsv = { package = "sourceview5", version = "0.10.0" }
once_cell = "1.21.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
chrono = "0.4.42"
rand = "0.8.5"
ureq = "3.1.4"
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zbus = "5.12"
ashpd = { version = "0.12", features = ["gtk4"] }
gdk-pixbuf = "0.21"
async-channel = "2.5.0"
relm4-macros = { version = "0.10.1", features = [], default-features = false }
